add mysql as database

--- a/library_system/CMakeLists.txt
+++ b/library_system/CMakeLists.txt
@@ -2,7 +2,15 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)
 # 工程名字
 PROJECT(library)
+# 添加PKG包
+FIND_PACKAGE(PkgConfig REQUIRED)
+# 搜索MySQL包
+PKG_SEARCH_MODULE(PKG_MYSQL REQUIRED mysql)
+MESSAGE(STATUS "PKG_MYSQL_FOUND:          ${PKG_MYSQL_FOUND}")
+MESSAGE(STATUS "PKG_MYSQL_INCLUDE_DIRS:          ${PKG_MYSQL_INCLUDE_DIRS}")
+# 添加三方库的头文件路径F
+INCLUDE_DIRECTORIES(${PKG_MYSQL_INCLUDE_DIRS})
 # 指定生成目标
 ADD_EXECUTABLE(library main.cpp library.cpp students.cpp)
 # 为指定的bin文件添加三方链接库
-# TARGET_LINK_LIBRARIES(opencv_test)
+TARGET_LINK_LIBRARIES(library ${PKG_MYSQL_LDFLAGS})
