--- a/cpp/xtensor_test/CMakeLists.txt
+++ b/cpp/xtensor_test/CMakeLists.txt
@@ -1,3 +1,8 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.2 FATAL_ERROR)
-INCLUDE_DIRECTORIES(3rdparty/xtensor/include 3rdparty/xtl/include)
-ADD_EXECUTABLE(demo main.cpp)
+cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
+include_directories(3rdparty)
+include_directories(3rdparty/xflens)
+include_directories(3rdparty/xtensor/include)
+include_directories(3rdparty/xtl/include) 
+include_directories(3rdparty/xtensor-blas 3rdparty/xflens)
+include_directories(ops)
+add_executable(demo main.cpp)
