--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: DoozyX/clang-format-lint-action@v0.13
       with:
-        source: './*'
+        source: 'find ./ -type d'
         exclude: './3rdparty'
         extensions: 'hpp,cc,cpp'
         clangFormatVersion: 12
