--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         extensions: 'h,c'
         clangFormatVersion: 12
         inplace: True
-        style: {BasedOnStyle: Google, IndentWidth: 4}
+        style: file
     - uses: EndBug/add-and-commit@v4
       with:
         author_name: Clang Robot
